--- a/main/admin/style.css
+++ b/main/admin/style.css
@@ -102,4 +102,15 @@ body {
      height: 90%;
 }
 
-/* dashboard styles */
+/* applicationView styles */
+.dataTables_length {
+     margin-bottom: 0.75rem;
+}
+
+.dataTables_filter input {
+     border: 1px solid gray;
+     border-radius: 0.375rem;
+}
+.application_row {
+     cursor: pointer;
+}
